{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 6,
  "lineage": "5ccfe549-cc1b-b13d-0402-c805fc7a4db1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0827eaee0b0b5364f",
            "association_id": "eipassoc-04ffcbb9fb84f4e17",
            "domain": "vpc",
            "id": "eipalloc-0827eaee0b0b5364f",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0a1121609c11b00eb",
            "private_dns": "ip-10-0-1-189.ap-south-1.compute.internal",
            "private_ip": "10.0.1.189",
            "public_dns": "ec2-3-109-81-54.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.81.54",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ee92e2d63afc18",
            "arn": "arn:aws:ec2:ap-south-1:318988877498:instance/i-089ded8d9600cfd8b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089ded8d9600cfd8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d7a62c27b89985ef",
            "private_dns": "ip-10-0-2-204.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0da2e99d26046ed5a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02931bccdc0924ae9",
            "tags": {
              "Name": "tf-Jenkins-hitika"
            },
            "tags_all": {
              "Name": "tf-Jenkins-hitika"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02e7b85d35cf24c3c"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet03",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318988877498:internet-gateway/igw-090c8de6998e60f87",
            "id": "igw-090c8de6998e60f87",
            "owner_id": "318988877498",
            "tags": {
              "Name": "tf-ig-hitika"
            },
            "tags_all": {
              "Name": "tf-ig-hitika"
            },
            "vpc_id": "vpc-06902f83d2ef63c52"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0827eaee0b0b5364f",
            "association_id": "eipassoc-04ffcbb9fb84f4e17",
            "connectivity_type": "public",
            "id": "nat-0cee949a16bcad78f",
            "network_interface_id": "eni-0a1121609c11b00eb",
            "private_ip": "10.0.1.189",
            "public_ip": "3.109.81.54",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02b581e682dc58f0b",
            "tags": {
              "Name": "tf-nat-hitika"
            },
            "tags_all": {
              "Name": "tf-nat-hitika"
            }
          },
          "dependencies": [
            "aws_eip.eip-01",
            "aws_subnet.subnet01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-pub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-090c8de6998e60f87",
            "id": "r-rtb-045a0f7e66bb8eb501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-045a0f7e66bb8eb50",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.pub-route",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318988877498:route-table/rtb-0b8a99b5bf5ba906d",
            "id": "rtb-0b8a99b5bf5ba906d",
            "owner_id": "318988877498",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cee949a16bcad78f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-priroute-hitika"
            },
            "tags_all": {
              "Name": "tf-priroute-hitika"
            },
            "timeouts": null,
            "vpc_id": "vpc-06902f83d2ef63c52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-01",
            "aws_nat_gateway.nat-01",
            "aws_subnet.subnet01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318988877498:route-table/rtb-045a0f7e66bb8eb50",
            "id": "rtb-045a0f7e66bb8eb50",
            "owner_id": "318988877498",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090c8de6998e60f87",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-pubroute-hitika"
            },
            "tags_all": {
              "Name": "tf-pubroute-hitika"
            },
            "timeouts": null,
            "vpc_id": "vpc-06902f83d2ef63c52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd90c74a7971fcdf",
            "route_table_id": "rtb-045a0f7e66bb8eb50",
            "subnet_id": "subnet-02b581e682dc58f0b"
          },
          "dependencies": [
            "aws_route_table.pub-route",
            "aws_subnet.subnet01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08681ab4916c7305e",
            "route_table_id": "rtb-045a0f7e66bb8eb50",
            "subnet_id": "subnet-053436455418aa8cd"
          },
          "dependencies": [
            "aws_route_table.pub-route",
            "aws_subnet.subnet02",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a0c129ff4d37181",
            "route_table_id": "rtb-0b8a99b5bf5ba906d",
            "subnet_id": "subnet-02931bccdc0924ae9"
          },
          "dependencies": [
            "aws_eip.eip-01",
            "aws_nat_gateway.nat-01",
            "aws_route_table.priv-route",
            "aws_subnet.subnet01",
            "aws_subnet.subnet03",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02518b351919b889d",
            "route_table_id": "rtb-0b8a99b5bf5ba906d",
            "subnet_id": "subnet-0d42c8baddc2212da"
          },
          "dependencies": [
            "aws_eip.eip-01",
            "aws_nat_gateway.nat-01",
            "aws_route_table.priv-route",
            "aws_subnet.subnet01",
            "aws_subnet.subnet04",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318988877498:subnet/subnet-02b581e682dc58f0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b581e682dc58f0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "318988877498",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-pub1-subnet-hitika"
            },
            "tags_all": {
              "Name": "tf-pub1-subnet-hitika"
            },
            "vpc_id": "vpc-06902f83d2ef63c52"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318988877498:subnet/subnet-053436455418aa8cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053436455418aa8cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "318988877498",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-pub2-subnet-hitika"
            },
            "tags_all": {
              "Name": "tf-pub2-subnet-hitika"
            },
            "vpc_id": "vpc-06902f83d2ef63c52"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318988877498:subnet/subnet-02931bccdc0924ae9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02931bccdc0924ae9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318988877498",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-pri1-subnet-hitika"
            },
            "tags_all": {
              "Name": "tf-pri1-subnet-hitika"
            },
            "vpc_id": "vpc-06902f83d2ef63c52"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318988877498:subnet/subnet-0d42c8baddc2212da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d42c8baddc2212da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318988877498",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-pri2-subnet-hitika"
            },
            "tags_all": {
              "Name": "tf-pri2-subnet-hitika"
            },
            "vpc_id": "vpc-06902f83d2ef63c52"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318988877498:vpc/vpc-06902f83d2ef63c52",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-037252c9f0ae17984",
            "default_route_table_id": "rtb-03c868ea9d3955eaa",
            "default_security_group_id": "sg-02e7b85d35cf24c3c",
            "dhcp_options_id": "dopt-0ee77835143e98fea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06902f83d2ef63c52",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c868ea9d3955eaa",
            "owner_id": "318988877498",
            "tags": {
              "Name": "tf-vpc-hitika"
            },
            "tags_all": {
              "Name": "tf-vpc-hitika"
            }
          }
        }
      ]
    }
  ]
}